--- a/deployment.yaml
+++ b/deployment.yaml
@@ -10,7 +10,7 @@ metadata:
   name: simple-node-app-service
   namespace: dev
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - port: 80
       targetPort: 3000
